--- a/btcprice/popup.html
+++ b/btcprice/popup.html
@@ -79,9 +79,17 @@
             <tr><th>平台</th><th>价格</th></tr>
           </thead>     
           <tbody>
+          	<tr>
+              <td><a target="_blank" href="https://vip.btcchina.com/" onclick="chrome.tabs.create({url:this.href})">比特币中国</a></td>
+              <td id="btcchina_ltc">waiting</td>
+            </tr>
             <tr>
               <td><a target="_blank" href="http://www.okcoin.com/?invite=3157429" onclick="chrome.tabs.create({url:this.href})">OKCoin</a></td>
               <td id="okcoin_ltc">waiting</td>
+            </tr>
+            <tr>
+              <td><a target="_blank" href="https://www.huobi.com/" onclick="chrome.tabs.create({url:this.href})">火币网</a></td>
+              <td id="huobi_ltc">waiting</td>
             </tr>
             <tr>
               <td><a target="_blank" href="https://www.fxbtc.com/" onclick="chrome.tabs.create({url:this.href})">FXBTC</a></td>
@@ -113,7 +121,7 @@
       <div class="tab-pane about" id="donate">
         <div style="padding: 10px 20px;">
         <h4><strong>版本</strong></h4>
-        <p>2.6</p>
+        <p>2.7</p>
         <h4><strong>作者</strong></h4>
         <p>邮箱：shaomxing@gmail.com<br>微博：<a target="_blank" href="http://weibo.com/uleone" onclick="chrome.tabs.create({url:this.href})">@霍顿</a></p>
         <h4><strong>捐助</strong></h4>
