add change badge color function

--- a/btcprice/options.html
+++ b/btcprice/options.html
@@ -58,6 +58,12 @@
               的价格
             </div>
             <hr />
+            <div class="form-inline">
+              颜色：
+              <input type="radio" name="color" value="1" checked="checked"/> 红涨绿跌
+              <input type="radio" name="color" value="2" /> 绿涨红跌
+            </div>
+            <hr />
             <button class="btn btn-primary" id="dispSaveBtn">保存</button>
           </div>
         </div>
