--- a/btcprice/options.html
+++ b/btcprice/options.html
@@ -60,8 +60,8 @@
             <hr />
             <div class="form-inline">
               颜色：
-              <input type="radio" name="color" value="1" checked="checked"/> 红涨绿跌
-              <input type="radio" name="color" value="2" /> 绿涨红跌
+              <input type="radio" name="color" id="color1" value="1" checked="checked"/> 红涨绿跌
+              <input type="radio" name="color" id="color2" value="2" /> 绿涨红跌
             </div>
             <hr />
             <button class="btn btn-primary" id="dispSaveBtn">保存</button>
